# batou

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  appenv.py  develop.sh  fix_whitespace.py  pyproject.toml  pytest.ini  re-encrypt-fixture-secrets.sh  release-this.sh  rename-example-secrets.py  rename-secrets.py  setup.py  tox.ini  ty.toml  update-appenv-lockfiles.py
.github/workflows/: bootstrap.yml  main.yml  nix.yml  pre-commit.yaml
CHANGES.d/: 20260120_202354_dev.md  20260303_010241_dev_ts_ai.md  20260504_005557_ts_ts_types.md
doc/source/: conf.py
examples/api/: pyproject.toml
examples/django/: pyproject.toml
examples/django/components/django/: component.py
examples/durations/: pyproject.toml
examples/durations/components/takeslongtime/: component.py
examples/errors/: pyproject.toml
examples/errors/environments/errors/: secrets.cfg.gpg
examples/errors2/: pyproject.toml
examples/errors2/components/dnsproblem/: component.py
examples/errors2/environments/errors/: secrets.cfg.gpg
examples/errorsnohost/: pyproject.toml
examples/ignores/: pyproject.toml
examples/largetempl/: pyproject.toml
examples/package/: pyproject.toml
examples/sensitive-values/: pyproject.toml
examples/sync_async/: pyproject.toml
examples/toml/: pyproject.toml
examples/toml/components/alerting/: component.py
examples/toml/components/apache/: component.py
examples/toml/components/backoffice/: component.py
examples/toml/components/copypreislistetonfs/: component.py
examples/toml/components/counter5/: component.py
examples/toml/components/crontab/: component.py
examples/toml/components/frontendrebuild/: component.py
examples/toml/components/frontendsymfony/: component.py
examples/toml/components/ftp/: component.py
examples/toml/components/haproxy/: component.py
examples/toml/components/haproxyaddress/: component.py
examples/toml/components/haproxys3/: component.py
examples/toml/components/hello/: component.py
examples/toml/components/httpbasicauth/: component.py
examples/toml/components/importersymfony/: component.py
examples/toml/components/journalbeattransport/: component.py
examples/toml/components/logrotate/: component.py
examples/toml/components/mailpit/: component.py
examples/toml/components/mysqlserver/: component.py
examples/toml/components/nginxbrand_a/: component.py
examples/toml/components/nginxbrand_b/: component.py
examples/toml/components/nginxbrand_c/: component.py
examples/toml/components/nginxbrand_d/: component.py
examples/toml/components/nginxs3/: component.py
examples/toml/components/oaisymfony/: component.py
examples/toml/components/postfixrelay/: component.py
examples/toml/components/postgresql/: component.py
examples/toml/components/provision/: component.py
examples/toml/components/rediscache/: component.py
examples/toml/components/redissession/: component.py
examples/toml/components/report/: component.py
examples/toml/components/sensuchecks/: component.py
examples/toml/components/settings/: component.py
examples/tutorial-buildout/: pyproject.toml
examples/tutorial-component/: pyproject.toml
examples/tutorial-helloworld/: pyproject.toml
examples/tutorial-parallelize/: pyproject.toml
examples/tutorial-provision-container/: pyproject.toml
examples/tutorial-secrets/: pyproject.toml
examples/vagrant/: pyproject.toml
examples/vagrant-multi/: pyproject.toml
examples/venvs/: pyproject.toml
nix/: batou.nix
research/: 2026-02-13_automatic-type-annotations.md
specs/: SDD-F001-debug-package.md  SDD-F006-batommel-cli.md  SPEC_INDEX.toml
specs/design/: debug-settings.md  fd-tracking.md  ssh-feature.md  templatestats-class.md  type-stubs.md
specs/requirements/: batommel-deploy.md  debug-settings.md  diff-control-env-vars.md  fd-tracking.md  ssh-feature.md
src/batou/: __init__.py  _output.py  check.py  component.py  config_toml.py  conftest.py  deploy.py  environment.py  fixtures.py  host.py  ini_to_toml.py  main.py  migrate_toml.py  provision.py  remote_core.py  repository.py  resources.py  ssh.py  template.py  toml_to_ini.py  utils.py  version.py  version.txt  vfs.py
src/batou/batommel/: __init__.py  deploy.py
src/batou/debug/: cli.py  fd_tracker.py  profiler.py  profiling.py  remote_fd_tracking.py  settings.py  template_stats.py
src/batou/lib/: appenv.py  archive.py  buildout.py  cmmi.py  cron.py  debian.py  download.py  file.py  git.py  goceptnet.py  logrotate.py  mercurial.py  mysql.py  nagios.py  package.py  python.py  supervisor.py  svn.py
src/batou/migrate/: __init__.py
src/batou/secrets/: __init__.py  edit.py  encryption.py  manage.py
src/batou/tests/: conftest.py  ellipsis.py  test_batommel_deploy.py  test_check.py  test_component.py  test_config.py  test_config_toml.py  test_dependencies.py  test_deploy.py  test_diff_control.py  test_encryption_switch.py  test_endtoend.py  test_environment.py  test_exceptions.py  test_host.py  test_ini_toml_roundtrip.py  test_main.py  test_output_enhancements.py  test_remote.py  test_remote_core.py  test_repository.py  test_resources.py  test_ssh.py  test_template.py  test_utils.py  test_version.py  test_vfs.py
stubs/: ruff.toml  stubtest-allowlist.txt
stubs/batou/: __init__.pyi  _output.pyi  check.pyi  component.pyi  config_toml.pyi  deploy.pyi  environment.pyi  fixtures.pyi  host.pyi  ini_to_toml.pyi  main.pyi  provision.pyi  remote_core.pyi  repository.pyi  resources.pyi  ssh.pyi  template.pyi  toml_to_ini.pyi  utils.pyi  version.pyi  vfs.pyi
stubs/batou/batommel/: deploy.pyi
stubs/batou/debug/: cli.pyi  fd_tracker.pyi  profiler.pyi  profiling.pyi  remote_fd_tracking.pyi  settings.pyi  template_stats.pyi
stubs/batou/lib/: appenv.pyi  archive.pyi  buildout.pyi  cmmi.pyi  cron.pyi  debian.pyi  download.pyi  file.pyi  git.pyi  logrotate.pyi  mercurial.pyi  mysql.pyi  nagios.pyi  package.pyi  python.pyi  service.pyi  supervisor.pyi  svn.pyi
stubs/batou/migrate/: __init__.pyi
stubs/batou/secrets/: __init__.pyi  edit.pyi  encryption.pyi  manage.pyi
stubs/pyrage/: __init__.pyi
(+58 files in other folders)
