[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batou"
version = "2.7.0.dev5"
description = "A utility for automating multi-host, multi-environment software builds and deployments."
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Christian Theune", email = "ct@flyingcircus.io" }]
keywords = ["deployment"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "ConfigUpdater>=3.2",
    "Jinja2>=3.1.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests",
    "setuptools>=66.1.0",
    "execnet>=1.8.1",
    "importlib_metadata",
    "importlib_resources",
    "py>=1.11.0",
    "pyyaml",
    "remote-pdb",
    "rtoml>=0.11.0",
]

[project.scripts]
batou = "batou.main:main"
batommel = "batou.batommel:app"

[project.entry-points."zc.buildout"]
requirements = "batou.buildout:Requirements"

[project.entry-points."batou.provisioners"]
fc-nixos-dev-container = "batou.provision:FCDevContainer"
fc-nixos-dev-vm = "batou.provision:FCDevVM"

[project.urls]
Homepage = "https://batou.readthedocs.io/en/latest/"
Repository = "https://github.com/flyingcircusio/batou"

[tool.hatch.build.targets.wheel]
packages = ["src/batou"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]

[dependency-groups]
test = [
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-instafail",
    "pytest-timeout",
]
lint = ["ruff", "ty"]
check-cmd = ["rich", "typer"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "check-cmd" },
    "tox>=4.0",
    "tox-uv",
    "sphinx",
    "recommonmark",
]

# =============================================================================
# tox configuration
# =============================================================================
[tool.tox]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14", "fix"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "wheel"
runner = "uv-venv-lock-runner"
setenv = {APPENV_BEST_PYTHON = "{envpython}", COLUMNS = "80", IN_TOX_TEST = "1"}
depends = ["fix"]
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.fix]
skip_install = true
depends = []
description = "Format, lint, fix whitespace, type-check"
dependency_groups = ["test", "lint"]
commands = [
    ["ruff", "check", "--fix", "."],
    ["ruff", "format", "."],
    ["ty", "check", "--extra-search-path", "stubs", "."],
]

# =============================================================================
# ruff configuration
# =============================================================================
[tool.ruff]
target-version = "py39"
src = ["src", "stubs"]
exclude = [
    "examples/**",  # Example projects - not batou source code
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = [
    "E501",  # line too long
    "N818",  # batou exception naming convention (ReportingException, not ReportingError)
    "B904",  # raise without from - batou exception hierarchy pattern
]

# Stub-specific ignores - stubs mirror source code conventions
[tool.ruff.lint.per-file-ignores]
"stubs/**" = [
    "E402",   # Module import not at top - stubs often need forward references
    "N801",   # Class naming - batou convention (VirtualEnvPy2_7)
    "N802",   # Function naming - batou convention (ServiceCheck)
    "N818",   # Exception naming - batou convention (ReportingException, etc.)
    "ANN401", # Any in type hints - necessary for dynamic patterns
    "ANN201", # Missing return type - acceptable for void methods in stubs
]
"src/batou/lib/file.py" = [
    "E402",   # Lazy imports for optional dependencies
]
"src/batou/lib/nagios.py" = [
    "N802",   # ServiceCheck function name - Nagios convention
]
"src/batou/lib/python.py" = [
    "N801",   # VirtualEnvPy2_7 class name - version-specific class
]
"src/batou/deploy.py" = [
    "N806",   # STEPS, ACTION, SUCCESS_FORMAT constants
]
"src/batou/provision.py" = [
    "N806",   # KNOWN_HOSTS_FILE constant
]
"src/batou/secrets/encryption.py" = [
    "N806",   # IS_CHILD constant
]
"src/batou/debug/remote_fd_tracking.py" = [
    "N806",   # FD_WARNING_THRESHOLD constant
]
"src/batou/remote_core.py" = [
    "B018",   # `channel` name check for bootstrapping
]
# Test-specific ignores
"**/tests/**/*.py" = [
    "B018",   # Useless expressions - test fixtures and assertions
    "B017",   # assert Exception - broad exception testing
    "B015",   # Pointless comparison - test assertions
    "N802",   # Function names like test_..._TRUE - descriptive test names
    "N806",   # Variables like TEMPLATE, OLD_GPG_BINARY_CANDIDATES - test constants
]

# =============================================================================
# ty type-checking configuration
# =============================================================================

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src", "stubs"]
exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/*_test.py",
]

# =============================================================================
# ty type-checking overrides
# Batou uses dynamic attribute patterns (configure() sets attributes used in verify()/update())
# that ty cannot statically verify. These overrides silence false positives.
# =============================================================================

# Core exceptions - factory pattern with dynamic attributes in from_context()
[[tool.ty.overrides]]
include = ["src/batou/__init__.py"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"

# Component base - workdir:str=None pattern
[[tool.ty.overrides]]
include = ["src/batou/component.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"

# Template engine - dynamic cache attributes
[[tool.ty.overrides]]
include = ["src/batou/template.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# Resources - dynamic component/resource attributes
[[tool.ty.overrides]]
include = ["src/batou/resources.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
unsupported-operator = "ignore"
not-subscriptable = "ignore"
possibly-missing-attribute = "ignore"

# Remote core - channel can be None, execnet dynamic
[[tool.ty.overrides]]
include = ["src/batou/remote_core.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
unresolved-reference = "ignore"
not-subscriptable = "ignore"
call-non-callable = "ignore"
possibly-missing-attribute = "ignore"

# Host - execnet monkey-patching, yaml.load
[[tool.ty.overrides]]
include = ["src/batou/host.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
missing-argument = "ignore"

# Environment - configparser optionxform override
[[tool.ty.overrides]]
include = ["src/batou/environment.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"

# Deploy - deployment tracking, threading.join override
[[tool.ty.overrides]]
include = ["src/batou/deploy.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-method-override = "ignore"
possibly-missing-attribute = "ignore"

# Check - timing attributes
[[tool.ty.overrides]]
include = ["src/batou/check.py"]

[tool.ty.overrides.rules]
unsupported-operator = "ignore"
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"

# Utils - dynamic attributes
[[tool.ty.overrides]]
include = ["src/batou/utils.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
possibly-missing-attribute = "ignore"

# Repository - vcs attributes
[[tool.ty.overrides]]
include = ["src/batou/repository.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# Provision - dynamic provisioner
[[tool.ty.overrides]]
include = ["src/batou/provision.py"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"

# =============================================================================
# Library components - all use configure()/verify()/update() pattern
# =============================================================================

[[tool.ty.overrides]]
include = ["src/batou/lib/file.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/archive.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/supervisor.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
not-iterable = "ignore"
call-non-callable = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/cmmi.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/download.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/python.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/package.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/cron.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
unknown-argument = "ignore"
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/lib/appenv.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
missing-argument = "ignore"

[[tool.ty.overrides]]
include = [
    "src/batou/lib/service.py",
    "src/batou/lib/mercurial.py",
    "src/batou/lib/logrotate.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
possibly-missing-attribute = "ignore"

# =============================================================================
# Secrets - encryption providers
# =============================================================================

[[tool.ty.overrides]]
include = ["src/batou/secrets/encryption.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["src/batou/secrets/__init__.py", "src/batou/secrets/edit.py", "src/batou/secrets/manage.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"

# =============================================================================
# Third-party workarounds
# =============================================================================

[tool.ty.analysis]
allowed-unresolved-imports = ["yaml"]

# =============================================================================
# scriv changelog configuration
# =============================================================================
[tool.scriv]
format = "md"
fragment_directory = "CHANGES.d"
output_file = "CHANGES.md"
version = "unreleased"
entry_title_template = ""
new_fragment_template = "- New changelog entry."
insert_marker = "- Nothing changed yet."
categories = ""
