[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling>=1.26" ]

[project]
name = "batou"
description = "A utility for automating multi-host, multi-environment software builds and deployments."
readme = "README.md"
keywords = [ "deployment" ]
license = "BSD-2-Clause"
license-files = [ "LICENSE" ]
authors = [ { name = "Christian Theune", email = "ct@flyingcircus.io" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "configupdater>=3.2",
  "execnet>=1.8.1",
  "jinja2>=3.1.4",
  "paramiko>=3",
  "py>=1.11",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pyyaml",
  "remote-pdb",
  "requests",
  "rich",
  "setuptools>=66.1",
]
optional-dependencies.batommel = [ "rtoml", "typer" ]
optional-dependencies.pyrage = [
  "bcrypt",
  "cryptography",
  "pyrage",
]
urls.Homepage = "https://batou.readthedocs.io/en/latest/"
urls.Repository = "https://github.com/flyingcircusio/batou"
scripts.batommel = "batou.batommel:app"
scripts.batou = "batou.main:main"
entry-points."batou.provisioners".fc-nixos-dev-container = "batou.provision:FCDevContainer"
entry-points."batou.provisioners".fc-nixos-dev-vm = "batou.provision:FCDevVM"
entry-points."zc.buildout".requirements = "batou.buildout:Requirements"

[dependency-groups]
batommel = [ "rtoml", "typer" ]
dev = [
  "tox",
  "tox-uv-bare",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
]
test = [
  "pyrage-stubs",
  "pytest",
  "pytest-cov",
  "pytest-deduplicate",
  "pytest-instafail>=0.5.0",
  "pytest-patterns",
  "pytest-ruff",
  "pytest-timeout",
  "pytest-ty",
  "pytest-xdist",
]
docs = [
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
]
lint = [
  "pyproject-fmt",
  "ruff",
  "ty",
  "types-pyyaml",
  "types-requests",
  "vulture",
]

[tool.hatch]
build.targets.sdist.include = [ "/src", "/README.md", "/LICENSE" ]
build.targets.wheel.packages = [ "src/batou" ]
build.targets.wheel.artifacts = [
  # Init template for `batou init`
  "src/batou/init-template/**/*",
  # Test fixtures
  "src/batou/tests/fixture/**/*",
  "src/batou/secrets/tests/fixture/**/*",
  # Resource templates
  "src/batou/lib/resources/**/*",
  # Additional data files
  "src/batou/insecure-private.key",
  "src/batou/**/*.txt",
  "src/batou/**/*.in",
  "src/batou/**/*.key",
]
version.source = "vcs"
version.raw-options = { version_scheme = "no-guess-dev", local_scheme = "node-and-timestamp", fallback_version = "3.0.0.dev0" }

# [tool.ty] -> see ty.conf
[tool.uv]
sources.pytest-deduplicate = { git = "https://github.com/dpausp/pytest_deduplicate", branch = "ts-ai" }
sources.pytest-patterns = { git = "https://github.com/dpausp/pytest-patterns", branch = "ts-ai" }

[tool.ruff]
target-version = "py310"
src = [ "src" ]
exclude = [
  "examples/**", # Example projects - not batou source code
]
lint.select = [ "B", "C4", "E", "F", "FLY", "I", "N", "PERF", "RUF", "SIM", "UP", "W" ]
lint.ignore = [
  "B904",   # raise without from - batou exception hierarchy pattern
  "COM812", # trailing comma missing - conflicts with formatter
  "E501",   # line too long
  "ISC001", # implicitly concatenated strings - conflicts with formatter
  "N818",   # batou exception naming convention (ReportingException, not ReportingError)
]
# Test-specific ignores
lint.per-file-ignores."**/tests/**/*.py" = [
  "B015", # Pointless comparison - test assertions
  "B017", # assert Exception - broad exception testing
  "B018", # Useless expressions - test fixtures and assertions
  "N802", # Function names like test_..._TRUE - descriptive test names
  "N806", # Variables like TEMPLATE, OLD_GPG_BINARY_CANDIDATES - test constants
]
lint.per-file-ignores."src/batou/debug/remote_fd_tracking.py" = [
  "N806", # FD_WARNING_THRESHOLD constant
]
lint.per-file-ignores."src/batou/deploy.py" = [
  "N806", # STEPS, ACTION, SUCCESS_FORMAT constants
]
lint.per-file-ignores."src/batou/lib/file.py" = [
  "E402", # Lazy imports for optional dependencies
]
lint.per-file-ignores."src/batou/lib/nagios.py" = [
  "N802", # ServiceCheck function name - Nagios convention
]
lint.per-file-ignores."src/batou/lib/python.py" = [
  "N801", # VirtualEnvPy2_7 class name - version-specific class
]
lint.per-file-ignores."src/batou/provision.py" = [
  "N806", # KNOWN_HOSTS_FILE constant
]
lint.per-file-ignores."src/batou/remote_core.py" = [
  "B018", # `channel` name check for bootstrapping
]
lint.per-file-ignores."src/batou/secrets/encryption.py" = [
  "N806", # IS_CHILD constant
]
# Stub-specific ignores - stubs mirror source code conventions
lint.per-file-ignores."stubs/**" = [
  "ANN201", # Missing return type - acceptable for void methods in stubs
  "ANN401", # Any in type hints - necessary for dynamic patterns
  "E402",   # Module import not at top - stubs often need forward references
  "N801",   # Class naming - batou convention (VirtualEnvPy2_7)
  "N802",   # Function naming - batou convention (ServiceCheck)
  "N818",   # Exception naming - batou convention (ReportingException, etc.)
]

[tool.pytest]
ini_options.addopts = [
  "--cov=src",
  "--cov-report=html",
  "--junitxml=report.xml",
  "--instafail",
  "--import-mode=importlib",
  "--timeout=120",
  "-W",
  "error",
  # "--ruff",
  "--ty",
  "-m",
  "not slow and not debug",
]
ini_options.junit_family = "xunit2"
ini_options.markers = [
  "slow: This is a slow test.",
  "debug: Debug/development tests.",
]
ini_options.testpaths = [ "src" ]

[tool.coverage]
run.branch = true
run.source = [ "batou" ]
report.precision = 2

[tool.tox]
env_list = [ "fix", "cov", "3.10", "3.11", "3.12", "3.13", "3.14" ]
skip_missing_interpreters = true
env.cov.base_python = [ "3.14" ]
env.cov.package = "wheel"
env.cov.runner = "uv-venv-lock-runner"
env.cov.setenv = { APPENV_BEST_PYTHON = "{envpython}" }
env.cov.depends = [ "fix" ]
env.cov.description = "Tests with coverage and test deduplication check"
env.cov.commands = [
  [ "pytest", "--cov=batou", "--cov-report=term-missing", "--cov-report=html" ],
  # [ "python", "-m", "pytest_deduplicate", "src" ],
]
env.fix.skip_install = true
env.fix.depends = []
env.fix.description = "Format code with ruff"
env.fix.commands = [
  [ "uvx", "ruff", "format" ],
]
env_run_base.package = "wheel"
env_run_base.runner = "uv-venv-lock-runner"
env_run_base.setenv = { APPENV_BEST_PYTHON = "{envpython}" }
env_run_base.dependency_groups = [ "test", "batommel" ]
env_run_base.depends = [ "fix" ]
env_run_base.commands = [ [ "pytest", { replace = "posargs", extend = true } ] ]

[tool.scriv]
format = "md"
fragment_directory = "CHANGES.d"
output_file = "CHANGES.md"
version = "unreleased"
entry_title_template = ""
new_fragment_template = "- New changelog entry."
insert_marker = "- Nothing changed yet."
categories = ""
